polyglot-core/src/test/resources/grammars/positive/test-annotations.polyglot
Package org.anarres.polyglot.test.annotations;

Tokens
	@javaImplements('java.io.Serializable')
	@javaAnnotation('@net.jcip.annotations.ThreadSafe')
	foo = 'foo' ;

Abstract Syntax Tree

	@javaImplements('java.io.Serializable')
	@javaAnnotation('@net.jcip.annotations.ThreadSafe')
	@testBare
	@testNone()
	@testEmpty('')
	@testSingle('x')
	@testDouble('xx')
	@testEscaped('\\\n')
	program =
		@javaImplements('java.io.Serializable')
		@javaAnnotation('@net.jcip.annotations.ThreadSafe')
		{foo} @javaAnnotation('@javax.annotation.CheckForSigned') foo ;


