polyglot-core/src/test/resources/grammars/negative/test-annotations.polyglot
Package foo;

Abstract Syntax Tree

	@javaFieldAnnotation('@javax.annotation.CheckForSigned')
	foo =
		foo* ;
